--- a/src/app/components/pipelifetime/pipelifetime.component.html
+++ b/src/app/components/pipelifetime/pipelifetime.component.html
@@ -1,7 +1,30 @@
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title"></h5>
-        <h6 class="card-subtitle mb-2 text-muted"></h6>
-        <p class="card-text"></p>
+    <div class="card-header">
+        <h6><span class="card-subtitle mb-2 text-muted">Plataforma:</span> {{ pipe.platform }}</h6> 
     </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+            <span class="card-subtitle mb-2 text-muted">Well:</span> {{ pipe.well }} 
+        </li>
+        <li class="list-group-item">
+            <span class="card-subtitle mb-2 text-muted">Riser Set Number:</span> {{ pipe.riserSetNumber }}
+        </li>
+        <li class="list-group-item">
+            <span class="card-subtitle mb-2 text-muted">Supplier:</span> {{ pipe.supplier }}
+        </li>
+        <li class="list-group-item">
+            <span class="card-subtitle mb-2 text-muted">Section:</span> {{ pipe.section }}
+        </li>
+        <li class="list-group-item">
+            <span class="card-subtitle mb-2 text-muted">Life Length:</span> {{ pipe.lifeLength }}
+        </li>
+        <li class="list-group-item">
+            <span class="card-subtitle mb-2 text-muted">Reference:</span> {{ pipe.reference }}
+        </li>
+        <li class="list-group-item">
+            <span class="card-subtitle mb-2 text-muted">PSHH:</span> {{ pipe.pshh }}
+        </li>
+    </ul>
 </div>
+  </div>
